# pandas-extrapolator

./: .gitignore  README.md  env.yml  extrap.out  extrap_ls.py  extrap_ls.txt  extrapolator.py  main.py  pandas_extrapolator.py  psivardefs.py  pyproject.toml  setup.cfg  tmp.py
src/: __init__.py  compute_sapt_terms.py  extrap_df.py  plotting.py  s66by8.py
src/extrapolator/: __init__.py  extrapolator.py  hbc6.py
src/extrapolator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: hbc6-plat-adz-all.pkl  hbc6-plat-atz-all.pkl  test_sapt_components.py
